# img-show-ctf

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build-and-run.sh  vcpkg.json
res/shaders/: fragment.fs
src/: main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
